--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,75 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gXy-6C-h1W">
+                                <rect key="frame" x="127.66666666666669" y="346" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="9Ai-k6-Enz"/>
+                                    <constraint firstAttribute="height" constant="120" id="fwW-Yj-Nlh"/>
+                                </constraints>
+                                <state key="normal" image="Record"/>
+                                <connections>
+                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fZB-wa-ILD"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Tap to start recording" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVE-fS-7aW">
+                                <rect key="frame" x="105" y="98" width="165" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.41137877106666565" green="0.48462671041488647" blue="0.55295771360397339" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pitch Perfect" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dai-TC-ZVt">
+                                <rect key="frame" x="138" y="69" width="99" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eTU-Lb-22S">
+                                <rect key="frame" x="155.66666666666666" y="485" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="fex-iX-GF3"/>
+                                    <constraint firstAttribute="height" constant="64" id="laH-JI-0kp"/>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1TP-Ji-CTh"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.24986505508422852" green="0.30863606929779053" blue="0.35687488317489624" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="eTU-Lb-22S" firstAttribute="centerX" secondItem="gXy-6C-h1W" secondAttribute="centerX" id="OTE-Wi-loJ"/>
+                            <constraint firstItem="gXy-6C-h1W" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="PX3-Se-TD1"/>
+                            <constraint firstItem="gXy-6C-h1W" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="VhP-Kq-4FU"/>
+                            <constraint firstItem="GVE-fS-7aW" firstAttribute="top" secondItem="dai-TC-ZVt" secondAttribute="bottom" constant="8" id="Yhl-iF-b1b"/>
+                            <constraint firstItem="eTU-Lb-22S" firstAttribute="top" secondItem="gXy-6C-h1W" secondAttribute="bottom" constant="19" id="bkH-Fz-qAW"/>
+                            <constraint firstItem="GVE-fS-7aW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gFG-34-kq2"/>
+                            <constraint firstItem="dai-TC-ZVt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iCE-Sx-MeB"/>
+                            <constraint firstItem="gXy-6C-h1W" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iCg-gj-0YN"/>
+                            <constraint firstItem="dai-TC-ZVt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="jPK-VT-Gdb"/>
+                            <constraint firstItem="GVE-fS-7aW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nlN-NY-EAL"/>
+                            <constraint firstItem="gXy-6C-h1W" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="shR-g5-JNe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="recordButton" destination="gXy-6C-h1W" id="AHi-Mk-yv6"/>
+                        <outlet property="recordingLabel" destination="GVE-fS-7aW" id="5lR-yE-dsi"/>
+                        <outlet property="stopRecordingButton" destination="eTU-Lb-22S" id="c6I-GM-6nc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="397.60000000000002" y="33.733133433283363"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Record" width="155" height="155"/>
+        <image name="Stop" width="155" height="155"/>
+    </resources>
 </document>
