--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -52,7 +52,6 @@
                                 <state key="normal" image="Stop"/>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1TP-Ji-CTh"/>
-                                    <segue destination="5vN-52-JMs" kind="show" id="CaX-4P-0VT"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -77,20 +76,37 @@
                         <outlet property="recordButton" destination="gXy-6C-h1W" id="AHi-Mk-yv6"/>
                         <outlet property="recordingLabel" destination="GVE-fS-7aW" id="5lR-yE-dsi"/>
                         <outlet property="stopRecordingButton" destination="eTU-Lb-22S" id="c6I-GM-6nc"/>
+                        <segue destination="5vN-52-JMs" kind="show" identifier="stopRecording" id="B4e-IX-P0v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1340" y="33.251231527093594"/>
         </scene>
-        <!--View Controller-->
+        <!--Play Sounds View Controller-->
         <scene sceneID="Qaw-Id-4zo">
             <objects>
-                <viewController id="5vN-52-JMs" sceneMemberID="viewController">
+                <viewController id="5vN-52-JMs" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="OIf-5a-Rfq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="dqf-R4-R9Z">
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Sfg-p4-0xY">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="690"/>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="0.25098039215686274" green="0.30980392156862746" blue="0.35686274509803922" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="KDc-hf-mjJ" firstAttribute="trailing" secondItem="dqf-R4-R9Z" secondAttribute="trailing" id="CwP-3K-DtJ"/>
+                            <constraint firstItem="dqf-R4-R9Z" firstAttribute="leading" secondItem="KDc-hf-mjJ" secondAttribute="leading" id="dpl-mw-nEd"/>
+                            <constraint firstItem="KDc-hf-mjJ" firstAttribute="bottom" secondItem="dqf-R4-R9Z" secondAttribute="bottom" id="fMr-wv-WRz"/>
+                            <constraint firstItem="dqf-R4-R9Z" firstAttribute="top" secondItem="KDc-hf-mjJ" secondAttribute="top" id="lJh-Oe-uqJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="KDc-hf-mjJ"/>
                     </view>
                 </viewController>
